# AI_STT

./: .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  main_service.py  manifest.json  mcp_tool.py  pyproject.toml  test.py  test_cuncurrent.py  test_redis_client_cuncurrent.py  test_redis_server.py
.github/workflows/: docker-dev.yml
