[project]
name = "ai-stt"
version = "0.1.0"
description = ""
authors = [
    {name = "Hamzeluie",email = "mehdihamze73@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=1.22.5)",
    "scipy (>=1.11.0,<1.12.0)",
    "soundfile (>=0.12.0,<1.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "faster-whisper (>=1.2.0,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "torchaudio (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
redis = {version = ">=3.9", markers = "python_version >= \"3.10\""}
pydub = "^0.25.1"
